--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <meta property="og:site_name" content="Stud.log" />
     <meta name="description" content="Студенческий портал" />
     <meta name="keywords" content="сайт, студент, приложение, портал" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="/android-chrome-192x192.png" sizes="192x192" />
